--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
