--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "material-ui": "^0.20.0",
     "react": "^16.3.2",
